updated project section and skills section and improved layout

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h2>Projects</h2>
         <div class="project">
             <h3>MilkNet</h3>
+            <img src="milknet screenshot.PNG" alt="Milknet screenshot" style="width: 100%; max-width:600px ; border-radius: 10px; margin-bottom: 10px ;" ">
             <p>A decentralized blockchain-powered platform designed to enhance transparency, trust, and efficiency in the milk supply chain. It connects farmers directly with consumers, eliminating the need for cooperative bodies in farmer registration and milk verification.</p><br>
             <a href="https://milknet-dapp.vercel.app" target="_blank" class="btn">View Project</a>
         </div>
@@ -43,15 +44,18 @@
         <div class="skills-container">
             <div class="skill-card">
                 <h3>Frontend</h3>
-                <p>HTML, CSS, JavaScript</p>
-            </div>
+                <img src="html-5.png" alt="Html icon" style="width: 50px;">
+            <img src="images/icons8-css-logo-48.png" alt="Css icon">          
+          </div>
             <div class="skill-card">
                 <h3>Backend</h3>
-                <p>Python, Java, C</p>
+                <img src="images/icons8-python.gif" alt="Python icon" style="width:50px;">
+                <img src="images/icons8-java-logo-48.png" alt="Java icon" style="width: 50px;">
+
             </div>
             <div class="skill-card">
                 <h3>Blockchain</h3>
-                <p>Solidity, Web3.js</p>
+                <img src="images/icons8-solidity-48.png" alt="Solidity icon" style="width: 50px;">
             </div>
         </div>
     </section>
